# decentralized-lottery

./: .env.example  .gitignore  README.md  brownie-config.yaml  main.ipynb  pyproject.toml  requirements.txt  test
contracts/: Lottery.sol  TestFunctions.sol
scripts/: deploy_lottery.py  helpful_script.py
tests/: test_lottery.py  test_lottery_integration.py  test_lottery_unit.py
